# Improved_Assignment-2

./: README.md  assignment_2_genAIuse copy.txt  pyproject.toml
.github/workflows/: tests.yml
src/direct_stiffness_method/: direct_stiffness_method.py
tests/: test_main.py
tutorials/.ipynb_checkpoints/: direct_stiffness_method-checkpoint.ipynb  technical_correctness_check-checkpoint.ipynb
